--- a/src/css-column-rule-style.css
+++ b/src/css-column-rule-style.css
@@ -15,17 +15,17 @@
 .crs-i {      column-rule-style: inherit; }
 
 @media screen and (min-width: 48em) {
-  .crs-n-ns {      column-rule-style: none; }
-  .crs-hid-ns {    column-rule-style: hidden; }
-  .crs-dot-ns {    column-rule-style: dotted; }
-  .crs-dash-ns {   column-rule-style: dashed; }
-  .crs-solid-ns {  column-rule-style: solid; }
-  .crs-double-ns { column-rule-style: double; }
-  .crs-groove-ns { column-rule-style: groove; }
-  .crs-ridge-ns {  column-rule-style: ridge; }
-  .crs-inset-ns {  column-rule-style: inset; }
-  .crs-outset-ns { column-rule-style: outset; }
-  .crs-i-ns {      column-rule-style: inherit; }
+  .crs-n-s {      column-rule-style: none; }
+  .crs-hid-s {    column-rule-style: hidden; }
+  .crs-dot-s {    column-rule-style: dotted; }
+  .crs-dash-s {   column-rule-style: dashed; }
+  .crs-solid-s {  column-rule-style: solid; }
+  .crs-double-s { column-rule-style: double; }
+  .crs-groove-s { column-rule-style: groove; }
+  .crs-ridge-s {  column-rule-style: ridge; }
+  .crs-inset-s {  column-rule-style: inset; }
+  .crs-outset-s { column-rule-style: outset; }
+  .crs-i-s {      column-rule-style: inherit; }
 }
 
 @media screen and (min-width:48em) and (max-width: 64em) {
